--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,10 @@
         </label>
         <button type="submit">Search</button>
       </form>
-
-      <div class="loader is-hidden"></div>
+      <div id="gallery">
+      <span class="loader is-hidden"></span>
       <ul class="gallery"></ul>
+    </div>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
